Fixed top bar menu breaks on smaller resolution

--- a/src/components/Main/NavBar/NavBar.less
+++ b/src/components/Main/NavBar/NavBar.less
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: center;
     height: 60px;
+    padding:0 15px;
     img {
       width: 30px;
     }
@@ -339,6 +340,13 @@
     }
     .mbitcoin-icon{
       background-image: url('../../../assets/icons/mbitcoin_icon_s.png');
+    }
+  }
+}
+.top-bar-row{
+  &>div{
+    &:nth-of-type(2){
+      flex-grow: 2;
     }
   }
 }
